refactor: improve fluent API ergonomics for Producer and Shape interfaces